// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Component should render correctly 1`] = `
<header
  id="feeds-header"
>
  <nav
    class="navbar navbar-expand-lg navbar-light px-5"
  >
    <div
      class="container-fluid"
    >
      <!---->
       
      <a
        class="router-link"
      >
        <img
          class="nav-logo"
          src="@/assets/Bloverse.svg"
        />
         
        <!---->
      </a>
       
      <div
        aria-controls="navbarSupportedContent"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="form-inline my-2 my-lg-0 navbar-toggler mobile-view"
        data-target="#navbarSupportedContent"
        data-toggle="collapse"
      >
        <a
          aria-expanded="false"
          aria-haspopup="true"
          class="nav-link dropdown-toggle"
          data-toggle="dropdown"
          href="#"
          id="navbarDropdown"
          role="button"
        >
          <span
            id="option-icon"
          />
           
          <span
            id="option-icon"
          />
           
          <span
            id="option-icon"
          />
        </a>
         
        <div
          aria-labelledby="navbarDropdown"
          class="dropdown-menu dropdown-mobile-view"
        >
          <a
            class="dropdown-item"
          >
            About
          </a>
           
          <a
            class="dropdown-item"
          >
            Photo Contest
          </a>
           
          <a
            class="dropdown-item"
          >
            Terms
          </a>
           
          <a
            class="dropdown-item"
          >
            Privacy
          </a>
           
          <a
            class="dropdown-item"
            href="#"
          >
            FAQ
          </a>
           
          <div
            class="dropdown-divider"
          />
           
          <a
            class="dropdown-item"
            data-toggle="modal"
            href="#feedback-modal"
          >
            Feedback
          </a>
        </div>
         
        <div>
          <span
            class="vl bg-light"
          />
           
          <!---->
        </div>
         
        <div
          class="nav-item dropdown initials"
        >
          <a
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle initials-link round-avatar"
            data-toggle="dropdown"
            href="#"
            id="navbarDropdown"
            role="button"
            to="/login"
          >
            MD
          </a>
           
          <div
            aria-labelledby="navbarDropdown"
            class="dropdown-menu dropdown-mobile-view__avatar"
          >
            <a
              class="dropdown-item"
            >
              <span
                class="icon-profile"
              >
                <i
                  class="fal fa-user-circle"
                />
              </span>
              
            Profile
          
            </a>
             
            <div
              class="dropdown-divider"
            />
             
            <a
              class="dropdown-item"
            >
              <span
                class="icon-settings"
              >
                <i
                  class="fal fa-cog"
                />
              </span>
              
            Settings
          
            </a>
             
            <div
              class="dropdown-divider"
            />
             
            <a
              class="dropdown-item"
              href="#"
            >
              <span
                class="icon-power"
              >
                <i
                  class="far fa-power-off"
                />
              </span>
              
            Sign Out
          
            </a>
          </div>
        </div>
      </div>
       
      <div
        class="collapse navbar-collapse"
      >
        <ul
          class="navbar-nav ml-auto"
        >
          <li
            class="nav-item active"
          >
            <a
              class="nav-link"
            >
              Home
            
              <span
                class="sr-only"
              >
                (current)
              </span>
            </a>
          </li>
           
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
            >
              About
            </a>
          </li>
           
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/photocontest"
            >
              Photo Contest
            </a>
          </li>
           
          <li
            class="nav-item dropdown pr-4"
          >
            <a
              aria-expanded="false"
              aria-haspopup="true"
              class="nav-link dropdown-toggle"
              data-toggle="dropdown"
              href="#"
              id="navbarDropdown"
              role="button"
            >
              <span
                id="option-icon"
              />
               
              <span
                id="option-icon"
              />
               
              <span
                id="option-icon"
              />
            </a>
             
            <div
              aria-labelledby="navbarDropdown"
              class="dropdown-menu dropdown-menu--elipsis"
            >
              <a
                class="dropdown-item"
              >
                Terms
              </a>
               
              <a
                class="dropdown-item"
              >
                Privacy
              </a>
               
              <a
                class="dropdown-item"
                href="#"
              >
                FAQ
              </a>
               
              <div
                class="dropdown-divider"
              />
               
              <a
                class="dropdown-item"
                data-toggle="modal"
                href="#feedback-modal"
              >
                Feedback
              </a>
            </div>
          </li>
        </ul>
         
        <div
          class="form-inline my-2 my-lg-0 pr-4"
        >
          <!---->
           
          <div
            class="nav-item dropdown initials"
          >
            <a
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle d-flex justify-content-center align-items-center"
              data-toggle="dropdown"
              href="#"
              id="navbarDropdown"
              role="button"
              to="/login"
            >
              <button
                class="round-avatar mr-2"
              >
                MD
              </button>
               
              <i
                class="fal fa-angle-down fa-2x down-arrow"
              />
            </a>
             
            <div
              aria-labelledby="navbarDropdown"
              class="dropdown-menu"
            >
              <a
                class="dropdown-item"
              >
                <span
                  class="icon-profile"
                >
                  <i
                    class="fal fa-user-circle"
                  />
                </span>
                
              Profile
            
              </a>
               
              <div
                class="dropdown-divider"
              />
               
              <a
                class="dropdown-item"
              >
                <span
                  class="icon-settings"
                >
                  <i
                    class="fal fa-cog"
                  />
                </span>
                
              Settings
            
              </a>
               
              <div
                class="dropdown-divider"
              />
               
              <a
                class="dropdown-item"
                href="#"
              >
                <span
                  class="icon-power"
                >
                  <i
                    class="far fa-power-off"
                  />
                </span>
                
              Sign Out
            
              </a>
            </div>
          </div>
           
          <span
            class="vl bg-light"
          />
           
          <a
            class="publish-link btn btn-sm"
          >
            Publish
          </a>
        </div>
      </div>
    </div>
  </nav>
   
  <main
    id="bl-modal"
  >
    <div
      aria-hidden="true"
      aria-labelledby="customModal"
      class="modal fade"
      id="feedback-modal"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="modal-dialog modal-dialog-centered"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header darkBackground"
          >
            <!---->
             
            <div>
              <h6>
                <strong
                  class="alt-title"
                >
                  Send Us Some Feedback
                </strong>
              </h6>
               
              <h6
                class="mt-2 sub-title"
              >
                Found a bug? Have a suggestion?. Fill out the form below and we'll take a look!
              </h6>
            </div>
             
            <button
              aria-label="Close"
              class="close"
              data-dismiss="modal"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
           
          <div
            class="modal-body"
          >
            <div
              class="bl-modal-content"
            >
              <p>
                Enter your feedback here!
              </p>
               
              <textarea
                class="form-control mb-2 p-1"
              />
               
              <label
                class="ml-1 mr-3"
              >
                <input
                  name="feedback-type"
                  type="radio"
                />
                  Bug
              </label>
               
              <label
                class="mr-3"
              >
                <input
                  name="feedback-type"
                  type="radio"
                />
                  Comment
              </label>
               
              <label
                class="mr-3"
              >
                <input
                  name="feedback-type"
                  type="radio"
                />
                  Other
              </label>
            </div>
          </div>
           
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-outline-primary"
              data-dismiss="modal"
              type="button"
            >
              
              Close
            
            </button>
             
            <button
              class="btn btn-primary"
              type="button"
            >
              Send Feedback
            </button>
          </div>
        </div>
      </div>
    </div>
  </main>
</header>
`;

exports[`Navbar Component should render initials button 1`] = `
<header
  id="feeds-header"
>
  <nav
    class="navbar navbar-expand-lg navbar-light px-5"
  >
    <div
      class="container-fluid"
    >
      <!---->
       
      <a
        class="router-link"
      >
        <img
          class="nav-logo"
          src="@/assets/Bloverse.svg"
        />
         
        <!---->
      </a>
       
      <div
        aria-controls="navbarSupportedContent"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="form-inline my-2 my-lg-0 navbar-toggler mobile-view"
        data-target="#navbarSupportedContent"
        data-toggle="collapse"
      >
        <a
          aria-expanded="false"
          aria-haspopup="true"
          class="nav-link dropdown-toggle"
          data-toggle="dropdown"
          href="#"
          id="navbarDropdown"
          role="button"
        >
          <span
            id="option-icon"
          />
           
          <span
            id="option-icon"
          />
           
          <span
            id="option-icon"
          />
        </a>
         
        <div
          aria-labelledby="navbarDropdown"
          class="dropdown-menu dropdown-mobile-view"
        >
          <a
            class="dropdown-item"
          >
            About
          </a>
           
          <a
            class="dropdown-item"
          >
            Photo Contest
          </a>
           
          <a
            class="dropdown-item"
          >
            Terms
          </a>
           
          <a
            class="dropdown-item"
          >
            Privacy
          </a>
           
          <a
            class="dropdown-item"
            href="#"
          >
            FAQ
          </a>
           
          <div
            class="dropdown-divider"
          />
           
          <a
            class="dropdown-item"
            data-toggle="modal"
            href="#feedback-modal"
          >
            Feedback
          </a>
        </div>
         
        <div>
          <span
            class="vl bg-light"
          />
           
          <a
            class="get-started-link"
          >
            Get Started
          </a>
        </div>
         
        <!---->
      </div>
       
      <div
        class="collapse navbar-collapse"
      >
        <ul
          class="navbar-nav ml-auto"
        >
          <li
            class="nav-item active"
          >
            <a
              class="nav-link"
            >
              Home
            
              <span
                class="sr-only"
              >
                (current)
              </span>
            </a>
          </li>
           
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
            >
              About
            </a>
          </li>
           
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/photocontest"
            >
              Photo Contest
            </a>
          </li>
           
          <li
            class="nav-item dropdown pr-4"
          >
            <a
              aria-expanded="false"
              aria-haspopup="true"
              class="nav-link dropdown-toggle"
              data-toggle="dropdown"
              href="#"
              id="navbarDropdown"
              role="button"
            >
              <span
                id="option-icon"
              />
               
              <span
                id="option-icon"
              />
               
              <span
                id="option-icon"
              />
            </a>
             
            <div
              aria-labelledby="navbarDropdown"
              class="dropdown-menu dropdown-menu--elipsis"
            >
              <a
                class="dropdown-item"
              >
                Terms
              </a>
               
              <a
                class="dropdown-item"
              >
                Privacy
              </a>
               
              <a
                class="dropdown-item"
                href="#"
              >
                FAQ
              </a>
               
              <div
                class="dropdown-divider"
              />
               
              <a
                class="dropdown-item"
                data-toggle="modal"
                href="#feedback-modal"
              >
                Feedback
              </a>
            </div>
          </li>
        </ul>
         
        <div
          class="form-inline my-2 my-lg-0 pr-4"
        >
          <a
            class="get-started-link"
          >
            Get Started
          </a>
           
          <div
            class="nav-item dropdown initials"
          >
            <!---->
             
            <div
              aria-labelledby="navbarDropdown"
              class="dropdown-menu"
            >
              <a
                class="dropdown-item"
              >
                <span
                  class="icon-profile"
                >
                  <i
                    class="fal fa-user-circle"
                  />
                </span>
                
              Profile
            
              </a>
               
              <div
                class="dropdown-divider"
              />
               
              <a
                class="dropdown-item"
              >
                <span
                  class="icon-settings"
                >
                  <i
                    class="fal fa-cog"
                  />
                </span>
                
              Settings
            
              </a>
               
              <div
                class="dropdown-divider"
              />
               
              <a
                class="dropdown-item"
                href="#"
              >
                <span
                  class="icon-power"
                >
                  <i
                    class="far fa-power-off"
                  />
                </span>
                
              Sign Out
            
              </a>
            </div>
          </div>
           
          <span
            class="vl bg-light"
          />
           
          <a
            class="publish-link btn btn-sm"
          >
            Publish
          </a>
        </div>
      </div>
    </div>
  </nav>
   
  <main
    id="bl-modal"
  >
    <div
      aria-hidden="true"
      aria-labelledby="customModal"
      class="modal fade"
      id="feedback-modal"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="modal-dialog modal-dialog-centered"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header darkBackground"
          >
            <!---->
             
            <div>
              <h6>
                <strong
                  class="alt-title"
                >
                  Send Us Some Feedback
                </strong>
              </h6>
               
              <h6
                class="mt-2 sub-title"
              >
                Found a bug? Have a suggestion?. Fill out the form below and we'll take a look!
              </h6>
            </div>
             
            <button
              aria-label="Close"
              class="close"
              data-dismiss="modal"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
           
          <div
            class="modal-body"
          >
            <div
              class="bl-modal-content"
            >
              <p>
                Enter your feedback here!
              </p>
               
              <textarea
                class="form-control mb-2 p-1"
              />
               
              <label
                class="ml-1 mr-3"
              >
                <input
                  name="feedback-type"
                  type="radio"
                />
                  Bug
              </label>
               
              <label
                class="mr-3"
              >
                <input
                  name="feedback-type"
                  type="radio"
                />
                  Comment
              </label>
               
              <label
                class="mr-3"
              >
                <input
                  name="feedback-type"
                  type="radio"
                />
                  Other
              </label>
            </div>
          </div>
           
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-outline-primary"
              data-dismiss="modal"
              type="button"
            >
              
              Close
            
            </button>
             
            <button
              class="btn btn-primary"
              type="button"
            >
              Send Feedback
            </button>
          </div>
        </div>
      </div>
    </div>
  </main>
</header>
`;
